0.0
- copied from hornsby extension version 1.0883

1.0 (current live version)
- edited popup to hide unneeded options
- reworked import to work on alpha infrastructure
- reworked BAAG to work on alpha infrastructure, systems

1.0001
-added changelog

1.0002
- fixed multiline description and null in description errors

1.0003
- fixed time buttons bug
- fixed calendar display bug

1.0004
time buttons fix pt 2

1.0005 
???

1.0006
- added quick email/text