@@ -58,6 +58,11 @@
       <p id="fieldPrice">Field Price</p>
       <input id="fieldPriceBox" readonly>
     </div>
+    <div>
+      <p><strong>Bulk Email Importer</strong></p>
+      
+      <button id="resetBtn2">Reset Flags</button>
+    </div>
 
     <script type="module" src="popup.js"></script>
   </body>
